ADD - navbar structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
 </head>
 
 <body>
+    <header class="flex">
+        <nav>
+            logo
+            <ul class="flex">
+                <li><a href="#">Perchè Dropbox</a></li>
+                <li><a href="#">Funzioni</a></li>
+                <li><a href="#">Piani e prezzi </a></li>
+            </ul>
+
+        </nav>
+
+        <nav>
+            <ul class="flex">
+                <li><a href="#">Supporto</a></li>
+                <li><a href="#">Contatta l'ufficio vendite</a></li>
+                <li><a href="#">Accedi</a></li>
+                <li><span><a href="#">Inizia</a></span></li>
+            </ul>
+
+        </nav>
+
+    </header>
+
+
+
+
+
+
 
 </body>
 
