--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </header>
 
     <main>
+        <!-- jumbo -->
         <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
         <div class="flex">
             <div>
@@ -44,6 +45,45 @@
                 <i>icona</i>
             </div>
             <img src="./img/jumbo.png" alt="">
+
+
+        </div>
+
+        <!-- offers -->
+
+        <div class="container-s">
+            <h2>Trova il piano business che fa per te</h2>
+            <div>
+                <span>#</span>
+                <p>Fatturazione mensile</p>
+                <span>#</span>
+                <p>Fatturazione annuale</p>
+            </div>
+
+            <div>
+                <div class="card">
+
+                    <div class="flex">
+                        <i>#</i>
+                        <p>Singolo</p>
+                    </div>
+                    <h3>Professional</h3>
+
+
+
+
+                </div>
+
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+
+
+
+
+
+
 
 
         </div>
