ADD- row partnership structure

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="#">Annulla in qualsiasi momento</a>
                 <i>icona</i>
             </div>
-            <img src="./img/jumbo.png" alt="">
+            <img src="./img/jumbo.png" alt="foto-intestazione">
 
 
         </div>
@@ -81,12 +81,27 @@
 
 
 
+            <div class="flex">
+                <img src="./img/partner.png" alt="soci">
+
+                <div>
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per
+                        raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e
+                        supporto cotninui</p>
+
+                    <button>Trova un partner</button>
+                </div>
+
+
+            </div>
 
 
 
 
 
-        </div>
+
+        </div> <!-- chiusura container-s -->
 
 
 
