ADD - business feature structure

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <main>
         <!-- jumbo -->
+
         <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
         <div class="flex">
             <div>
@@ -81,6 +82,8 @@
 
 
 
+            <!-- partnership -->
+
             <div class="flex">
                 <img src="./img/partner.png" alt="soci">
 
@@ -97,6 +100,24 @@
             </div>
 
 
+            <!-- business feature -->
+
+
+            <h2>Esegui più operazioni con Dropbox Business</h2>
+
+            <div>
+                <div class="card-business">
+                    <img src="./img/business-feature-multi-device.png" alt="">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane cn un solo strumento. Crea, modifica e condividi contenuti
+                        cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper
+                        direttamente da Dropbox</p>
+                </div>
+
+                ripeti card * 5
+
+
+            </div>
 
 
 
