--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.cdnfonts.com/css/whitney-2" rel="stylesheet" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header class="flex">
-        <nav>
-            logo
-            <ul class="flex">
+        <nav class="flex">
+            <img src="./img/logo-small.png" alt="logo">
+            <ul class="flex ">
                 <li><a href="#">Perchè Dropbox</a></li>
                 <li><a href="#">Funzioni</a></li>
                 <li><a href="#">Piani e prezzi </a></li>
@@ -25,109 +29,41 @@
                 <li><a href="#">Supporto</a></li>
                 <li><a href="#">Contatta l'ufficio vendite</a></li>
                 <li><a href="#">Accedi</a></li>
-                <li><span><a href="#">Inizia</a></span></li>
+                <li><a href="#" class="btn">Inizia</a></li>
             </ul>
 
         </nav>
 
     </header>
 
+
     <main>
+
+
         <!-- jumbo -->
-
-        <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-        <div class="flex">
-            <div>
-                <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.
-                    Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per
-                    ottimizzare il flusso di lavoro esistente.</p>
-                <button><a href="#">Inizia la tua prova gratuita</a></button>
-                <a href="#">Annulla in qualsiasi momento</a>
-                <i>icona</i>
-            </div>
-            <img src="./img/jumbo.png" alt="foto-intestazione">
-
-
-        </div>
-
-        <!-- offers -->
-
-        <div class="container-s">
-            <h2>Trova il piano business che fa per te</h2>
-            <div>
-                <span>#</span>
-                <p>Fatturazione mensile</p>
-                <span>#</span>
-                <p>Fatturazione annuale</p>
-            </div>
-
-            <div>
-                <div class="card">
-
-                    <div class="flex">
-                        <i>#</i>
-                        <p>Singolo</p>
-                    </div>
-                    <h3>Professional</h3>
-
-
-
-
-                </div>
-
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-            </div>
-
-
-
-            <!-- partnership -->
-
+        <div class="bg-sky">
+            <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
             <div class="flex">
-                <img src="./img/partner.png" alt="soci">
-
                 <div>
-                    <h3>Entra in contatto con un partner Dropbox</h3>
-                    <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per
-                        raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e
-                        supporto cotninui</p>
-
-                    <button>Trova un partner</button>
+                    <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.
+                        Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato
+                        per
+                        ottimizzare il flusso di lavoro esistente.</p>
+                    <button><a href="#">Inizia la tua prova gratuita</a></button>
+                    <a href="#">Annulla in qualsiasi momento</a>
+                    <i>icona</i>
                 </div>
+                <img src="./img/jumbo.png" alt="foto-intestazione">
 
 
             </div>
-
-
-            <!-- business feature -->
-
-
-            <h2>Esegui più operazioni con Dropbox Business</h2>
-
-            <div>
-                <div class="card-business">
-                    <img src="./img/business-feature-multi-device.png" alt="">
-                    <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Porta a termine le attività quotidiane cn un solo strumento. Crea, modifica e condividi contenuti
-                        cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper
-                        direttamente da Dropbox</p>
-                </div>
-
-                ripeti card * 5
-
-
-            </div>
-
-
-
-
-        </div> <!-- chiusura container-s -->
-
+        </div>
 
 
 
     </main>
+
+
 
 
 
