--- a/index.html
+++ b/index.html
@@ -42,20 +42,25 @@
 
         <!-- jumbo -->
         <div class="bg-sky">
-            <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-            <div class="flex">
-                <div>
-                    <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.
-                        Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato
-                        per
-                        ottimizzare il flusso di lavoro esistente.</p>
-                    <button><a href="#">Inizia la tua prova gratuita</a></button>
-                    <a href="#">Annulla in qualsiasi momento</a>
-                    <i>icona</i>
+            <div class="container">
+                <h1>Tutto ciò che ti serve per il <br>
+                    lavoro, in un unico posto</h1>
+                <div class="flex">
+                    <div class="prova">
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
+                            posto.
+                            Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e
+                            integrato
+                            per
+                            ottimizzare il flusso di lavoro esistente.</p>
+                        <button><a href="#" class="btn">Inizia la tua prova gratuita</a></button>
+                        <a href="#">Annulla in qualsiasi momento</a>
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+                    <img src="./img/jumbo.png" alt="foto-intestazione" class="col-2-3">
+
+
                 </div>
-                <img src="./img/jumbo.png" alt="foto-intestazione">
-
-
             </div>
         </div>
 
