--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
         <!-- jumbo -->
-        <div class="bg-sky">
+        <div class="jumbo">
             <div class="container">
                 <h1>Tutto ciò che ti serve per il <br>
                     lavoro, in un unico posto</h1>
@@ -65,6 +65,116 @@
         </div>
 
 
+
+        <!-- offers -->
+
+        <div class="container-s">
+            <h2>Trova il piano business che fa per te</h2>
+            <div>
+                <span>#</span>
+                <p>Fatturazione mensile</p>
+                <span>#</span>
+                <p>Fatturazione annuale</p>
+            </div>
+
+            <div>
+                <div class="card">
+
+                    <div class="flex">
+                        <i>#</i>
+                        <p>Singolo</p>
+                    </div>
+                    <h3>Professional</h3>
+
+
+
+
+                </div>
+
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+
+
+
+            <!-- partnership -->
+
+            <div class="flex">
+                <img src="./img/partner.png" alt="soci">
+
+                <div>
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per
+                        raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e
+                        supporto cotninui</p>
+
+                    <button>Trova un partner</button>
+                </div>
+
+
+            </div>
+
+
+            <!-- business feature -->
+
+            <div>
+                <h2>Esegui più operazioni con Dropbox Business</h2>
+
+
+                <div class="card-business">
+                    <img src="./img/business-feature-multi-device.png" alt="">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane cn un solo strumento. Crea, modifica e condividi contenuti
+                        cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper
+                        direttamente da Dropbox</p>
+                </div>
+
+                ripeti card * 5
+
+
+
+
+
+
+                <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                <a href="#">Scopri di più sui nostri clienti</a>
+
+            </div>
+
+
+            <!-- boxes ??? -->
+
+            <div>
+
+                <div>
+                    colonna1
+                </div>
+
+
+                <div>
+                    colonna2
+                </div>
+
+
+                <div>
+                    colonna3
+                </div>
+
+
+
+
+            </div>
+
+
+
+
+
+
+
+
+
+        </div> <!-- chiusura container-s -->
 
     </main>
 
