--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h1>Tutto ciò che ti serve per il <br>
                     lavoro, in un unico posto</h1>
                 <div class="flex">
-                    <div class="prova">
+                    <div class="jumbo-section">
                         <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
                             posto.
                             Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e
@@ -66,34 +66,36 @@
 
 
 
-        <!-- offers -->
+        <!-- offer cards -->
 
         <div class="container-s">
             <h2>Trova il piano business che fa per te</h2>
-            <div>
-                <span>#</span>
-                <p>Fatturazione mensile</p>
-                <span>#</span>
-                <p>Fatturazione annuale</p>
+            <div class="radio-options">
+                <p><span class="radio-on"></span>Fatturazione mensile</p>
+                <p><span class="radio-off"></span>Fatturazione annuale</p>
             </div>
 
-            <div>
-                <div class="card">
+            <div class="card-box">
+                <div class="card col-1-3">
 
                     <div class="flex">
-                        <i>#</i>
+                        <i class="fa-solid fa-user"></i>
                         <p>Singolo</p>
                     </div>
-                    <h3>Professional</h3>
+                    <div class="card-body">
 
+                        <h3>Professional</h3>
+
+
+                    </div>
 
 
 
                 </div>
 
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card col-1-3"></div>
+                <div class="card col-1-3"></div>
+                <div class="card col-3-3"> </div>
             </div>
 
 
