--- a/index.html
+++ b/index.html
@@ -85,6 +85,44 @@
                     <div class="card-body">
 
                         <h3>Professional</h3>
+                        <h4>€ 12.00</h4>
+                        <p>/mese</p>
+
+                        <div class="flex">
+                            <i class="fa-solid fa-user"></i>
+                            <p>1 utente</p>
+                        </div>
+
+                        <div class="flex">
+                            <i class="fa-solid fa-folder"></i>
+                            <p>5 TB di spazio di archiviazione sicuro</p>
+                        </div>
+
+                        <div class="flex">
+                            <i class="fa-solid fa-draw-polygon"></i>
+                            <p>Funzioni di produttività premium e condivisione file semplice e sicura</p>
+                        </div>
+
+
+                        <button><a href="#" class="btn">Prova per 30 giorni</a></button>
+
+
+                        <div class="flex" id="buynow">
+                            <p>oppure </p> <a href="#" id="buynow"> acquista ora</a>
+                        </div>
+
+
+                        <h4>Punti Salienti del piano</h4>
+
+                        <div class="flex">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Invia file fino a 100 GB con Dropbox Transfert</p>
+                        </div>
+                        <div class="flex">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Cartelle offline su dispositivi mobili</p>
+                        </div>
+
 
 
                     </div>
@@ -95,7 +133,9 @@
 
                 <div class="card col-1-3"></div>
                 <div class="card col-1-3"></div>
-                <div class="card col-3-3"> </div>
+                <div class="card col-3-3"> ssss
+
+                </div>
             </div>
 
 
