--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
 
             <div class="card-box">
-                <div class="card col-1-3">
+                <div class="card col-1-3"> <!-- professional-->
 
                     <div class="flex">
                         <i class="fa-solid fa-user"></i>
@@ -124,7 +124,71 @@
                             <p>Cartelle offline su dispositivi mobili</p>
                         </div>
 
+                    </div>
 
+
+
+                </div>
+
+                <div class="card col-1-3"> <!-- advanced-->
+
+                    <div class="flex">
+                        <i class="fa-solid fa-users"></i>
+                        <p>Team</p>
+                    </div>
+                    <div class="card-body">
+
+                        <h3>Advanced</h3>
+                        <h4>€ 18.00</h4>
+                        <p>/utente/mese</p>
+
+                        <div class="flex">
+                            <i class="fa-solid fa-users"></i>
+                            <p>3 o più utenti</p>
+
+                        </div>
+
+                        <div class="flex">
+                            <i class="fa-solid fa-folder"></i>
+                            <p>Tutto lo spazio di cui ha bisogno il tuo team</p>
+                        </div>
+
+                        <div class="flex">
+                            <i class="fa-solid fa-draw-polygon"></i>
+                            <p>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</p>
+                        </div>
+
+
+                        <button><a href="#" class="btn">Prova per 30 giorni</a></button>
+
+
+                        <div class="flex" id="buynow">
+                            <p>oppure </p> <a href="#" id="buynow"> acquista ora</a>
+                        </div>
+
+
+                        <h4>Punti Salienti del piano</h4>
+
+                        <div class="flex">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Nessun limite di spazio per i file</p>
+                        </div>
+                        <div class="flex">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Cartelle offline su dispositivi mobili</p>
+                        </div>
+                        <div class="flex">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Risparmio del 50% rispetto alle iscrizioni singole</p>
+                        </div>
+                        <div class="flex">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Possibilità di inserire nuovi membri del team</p>
+                        </div>
+                        <div class="flex">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Gestione dei permessi in base ai ruoli</p>
+                        </div>
 
                     </div>
 
@@ -132,9 +196,88 @@
 
                 </div>
 
-                <div class="card col-1-3"></div>
-                <div class="card col-1-3"></div>
-                <div class="card col-3-3"> ssss
+                <div class="card col-1-3"> <!-- professional-->
+
+                    <div class="flex">
+                        <i class="fa-solid fa-building"></i>
+                        <p>Azienda</p>
+                    </div>
+                    <div class="card-body">
+
+                        <h3>Enterprise</h3>
+                        <h4>Contattaci</h4>
+                        <p>-</p>
+
+                        <div class="flex">
+                            <i class="fa-solid fa-user"></i>
+                            <p>10 o più utenti</p>
+
+                        </div>
+
+                        <div class="flex">
+                            <i class="fa-solid fa-folder"></i>
+                            <p>Soluzioni personalizzabili per la tua azienda</p>
+                        </div>
+
+                        <div class="flex">
+                            <i class="fa-solid fa-draw-polygon"></i>
+                            <p>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala
+                            </p>
+                        </div>
+
+
+                        <button><a href="#" class="btn">Contattaci</a></button>
+
+
+                        <div class="flex" id="buynow">
+                            <p>oppure </p> <a href="#" id="buynow"> acquista ora</a>
+                        </div>
+
+
+                        <h4>Punti Salienti del piano</h4>
+
+                        <div class="flex">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Cartelle offline su dispositivi mobili</p>
+                        </div>
+                        <div class="flex">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Servizio assistenza 24h</p>
+                        </div>
+                        <div class="flex">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Possibilità di personalizzazione totale</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="card col-3-3">
+                    <div class="flex">
+                        <i class="fa-solid fa-building"></i>
+                        <p>Team</p>
+                    </div>
+                    <div class="card-body">
+
+                        <div class="card-big">
+                            <div>
+                                <h3>Enterprise</h3>
+                                <h4>Contatta l'ufficio vendite per i prezzi</h4>
+                            </div>
+                            <button><a href="#" class="btn">Contatta l'ufficio vendite</a></button>
+
+
+                        </div>
+
+
+                        <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella
+                            gestione su qualsiasi scala</p>
+
+
+
+                    </div>
+
 
                 </div>
             </div>
