--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
                 </div>
 
-                <div class="card col-1-3"> <!-- professional-->
+                <div class="card col-1-3"> <!-- enterprise -->
 
                     <div class="flex">
                         <i class="fa-solid fa-building"></i>
@@ -253,7 +253,7 @@
 
                 </div>
 
-                <div class="card col-3-3">
+                <div class="card col-3-3"> <!-- enterprise - big card -->
                     <div class="flex">
                         <i class="fa-solid fa-building"></i>
                         <p>Team</p>
@@ -286,16 +286,17 @@
 
             <!-- partnership -->
 
-            <div class="flex">
-                <img src="./img/partner.png" alt="soci">
+            <div class="partner">
+                <img src="./img/partner.png" alt="soci" class="col-2-3">
 
-                <div>
+                <div class="partner-txt">
                     <h3>Entra in contatto con un partner Dropbox</h3>
                     <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per
                         raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e
-                        supporto cotninui</p>
+                        supporto continui.</p>
 
-                    <button>Trova un partner</button>
+                    <button><a href="#" class="btn-white">Trova un partner</a></button>
+
                 </div>
 
 
