--- a/index.html
+++ b/index.html
@@ -305,29 +305,80 @@
 
             <!-- business feature -->
 
-            <div>
-                <h2>Esegui più operazioni con Dropbox Business</h2>
+
+            <h2>Esegui più operazioni con Dropbox Business</h2>
 
 
-                <div class="card-business">
+            <div class="card-business-box">
+
+                <div class="card-business"> <!-- card business-->
+                    <img src="./img/business-feature-switching-tools.png" alt="">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane cn un solo strumento. Crea, modifica e condividi contenuti
+                        cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper
+                        direttamente da Dropbox.</p>
+                </div>
+
+
+                <div class=" card-business"> <!-- card business-->
+                    <img src="./img/business-feature-send-files-it.png" alt="">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane cn un solo strumento. Crea, modifica e condividi contenuti
+                        cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper
+                        direttamente da Dropbox.</p>
+                </div>
+
+
+                <div class="card-business"> <!-- card business-->
+                    <img src="./img/business-feature-coordinate-it.png" alt="">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane cn un solo strumento. Crea, modifica e condividi contenuti
+                        cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper
+                        direttamente da Dropbox.</p>
+                </div>
+
+
+                <div class="card-business"> <!-- card business-->
+                    <img src="./img/business-feature-integrations-it.png" alt="">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane cn un solo strumento. Crea, modifica e condividi contenuti
+                        cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper
+                        direttamente da Dropbox.</p>
+                </div>
+
+
+                <div class="card-business"> <!-- card business-->
                     <img src="./img/business-feature-multi-device.png" alt="">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Porta a termine le attività quotidiane cn un solo strumento. Crea, modifica e condividi contenuti
                         cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper
-                        direttamente da Dropbox</p>
+                        direttamente da Dropbox.</p>
                 </div>
 
-                ripeti card * 5
+
+                <div class="card-business"> <!-- card business-->
+                    <img src="./img/business-feature-security.png" alt="">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane cn un solo strumento. Crea, modifica e condividi contenuti
+                        cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper
+                        direttamente da Dropbox.</p>
+                </div>
 
 
-
-
-
-
-                <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
-                <a href="#">Scopri di più sui nostri clienti</a>
 
             </div>
+
+
+
+
+
+
+
+
+            <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+            <a href="#">Scopri di più sui nostri clienti</a>
+
+
 
 
             <!-- boxes ??? -->
