ADD boxes-txt section

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                         <button><a href="#" class="btn">Prova per 30 giorni</a></button>
 
 
-                        <div class="flex" id="buynow">
-                            <p>oppure </p> <a href="#" id="buynow"> acquista ora</a>
+                        <div class="flex buynow">
+                            <p>oppure </p> <a href="#" class="buynow"> acquista ora</a>
                         </div>
 
 
@@ -162,8 +162,8 @@
                         <button><a href="#" class="btn">Prova per 30 giorni</a></button>
 
 
-                        <div class="flex" id="buynow">
-                            <p>oppure </p> <a href="#" id="buynow"> acquista ora</a>
+                        <div class="flex buynow">
+                            <p>oppure </p> <a href="#" class="buynow"> acquista ora</a>
                         </div>
 
 
@@ -229,8 +229,8 @@
                         <button><a href="#" class="btn">Contattaci</a></button>
 
 
-                        <div class="flex" id="buynow">
-                            <p>oppure </p> <a href="#" id="buynow"> acquista ora</a>
+                        <div class="flex buynow">
+                            <p>oppure </p> <a href="#"> acquista ora</a>
                         </div>
 
 
@@ -371,48 +371,25 @@
 
 
 
+            <!-- boxes-txt -->
 
 
 
-
-            <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
-            <a href="#">Scopri di più sui nostri clienti</a>
-
-
-
-
-            <!-- boxes ??? -->
-
-            <div>
-
-                <div>
-                    colonna1
-                </div>
-
-
-                <div>
-                    colonna2
-                </div>
-
-
-                <div>
-                    colonna3
-                </div>
-
-
-
-
-            </div>
-
-
-
-
-
-
-
+            <h2>Più di 500.000 team utilizzano <br>
+                Dropbox Business</h2>
+            <a href="#" class="scopri">Scopri di più sui nostri clienti</a>
 
 
         </div> <!-- chiusura container-s -->
+
+
+
+
+
+
+
+
+
 
     </main>
 
