ADD boxes col 1

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         </div>
 
                         <div class="flex">
-                            <i class="fa-solid fa-draw-polygon"></i>
+                            <i class="fa-solid fa-share-nodes"></i>
                             <p>Funzioni di produttività premium e condivisione file semplice e sicura</p>
                         </div>
 
@@ -154,7 +154,7 @@
                         </div>
 
                         <div class="flex">
-                            <i class="fa-solid fa-draw-polygon"></i>
+                            <i class="fa-solid fa-share-nodes"></i>
                             <p>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</p>
                         </div>
 
@@ -220,7 +220,7 @@
                         </div>
 
                         <div class="flex">
-                            <i class="fa-solid fa-draw-polygon"></i>
+                            <i class="fa-solid fa-share-nodes"></i>
                             <p>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala
                             </p>
                         </div>
@@ -383,6 +383,45 @@
         </div> <!-- chiusura container-s -->
 
 
+
+        <!-- boxes  -->
+
+        <div class="boxes debug">
+
+            <div class="col-1">
+
+                <div class="box1">
+                    <img src="./img/designit.svg" alt="designitlogo">
+                </div>
+
+                <div class="box2">
+                    <img src="./img/arizona_state_university.svg" alt="">
+                </div>
+
+                <div class="box3">
+                    <img src="./img/university_of_florida.svg" alt="">
+                </div>
+
+                <div class="box4">
+                    <img src="./img/topps.svg" alt="">
+                </div>
+
+            </div>
+
+
+            <div class="col-2">
+                colonna2
+            </div>
+
+
+            <div class="debug col-3">
+                colonna3
+            </div>
+
+
+
+
+        </div>
 
 
 
