ADD boxes col 2

--- a/index.html
+++ b/index.html
@@ -410,7 +410,20 @@
 
 
             <div class="col-2">
-                colonna2
+                <img src="./img/designit.svg" alt="">
+
+                <div></div>
+
+                <p>
+                    "I membri del nostro team lavorano costantemenete in Paesi, fusi orari e uffici diversi. Ora molte
+                    soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto DRropbox e Dropbox Paper.
+                    Ora molte soluzioni sono compatibili con queste esigenze ma nessuna è facile quanto Dropbox Paper".
+                    <br><br><br>
+                    Morten Thomsen, Global IT Lead
+                </p>
+
+
+
             </div>
 
 
