ADD boxes col 3

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
         <!-- boxes  -->
 
-        <div class="boxes debug">
+        <div class="boxes">
 
             <div class="col-1">
 
@@ -427,8 +427,27 @@
             </div>
 
 
-            <div class="debug col-3">
-                colonna3
+            <div class="col-3">
+
+                <div class="box5">
+                    <img src="./img/world_bicycle_relief.svg" alt="designitlogo">
+                </div>
+
+                <div class="box6">
+                    <img src="./img/hearst_corp.svg" alt="">
+                </div>
+
+                <div class="box7">
+                    <img src="./img/lonely_planet.svg" alt="">
+                </div>
+
+                <div class="box8">
+                    <img src="./img/clear_channel.svg" alt="">
+                </div>
+
+
+
+
             </div>
 
 
