--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
         <div class="boxes">
 
-            <div class="col-1">
+            <div class="col-1"> <!-- col 1 -->
 
                 <div class="box1">
                     <img src="./img/designit.svg" alt="designitlogo">
@@ -409,7 +409,7 @@
             </div>
 
 
-            <div class="col-2">
+            <div class="col-2"> <!-- col 2 -->
                 <img src="./img/designit.svg" alt="">
 
                 <div></div>
@@ -427,7 +427,7 @@
             </div>
 
 
-            <div class="col-3">
+            <div class="col-3"> <!-- col 3-->
 
                 <div class="box5">
                     <img src="./img/world_bicycle_relief.svg" alt="designitlogo">
@@ -450,19 +450,19 @@
 
             </div>
 
-
-
-
         </div>
 
 
+        <!-- banner -->
+
+        <div class="banner">
+            <div class="container-s">
+                <h2>Porta Dropbox Business nella tua azienda.</h2>
+                <button><a href="#" class="btn-white"> Inizia la tua prova gratuita</a></button>
+            </div>
+        </div>
 
 
-
-
-
-
-    </main>
 
 
 
