--- a/index.html
+++ b/index.html
@@ -466,6 +466,31 @@
 
 
 
+        <!-- faq -->
+
+        <div class="faq container-s">
+            <h2>Domande frequenti</h2>
+
+            <div class="flex">
+                <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+
+            <div class="flex">
+                <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+
+            <div class="flex">
+                <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+        </div>
+
+
+    </main>
+
+
 
 
 
