--- a/index.html
+++ b/index.html
@@ -492,6 +492,26 @@
 
 
 
+    <footer>
+        <div class="container flex">
+
+            <div class="col-1-5">
+                <h3>Dropbox</h3>
+
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>funzioni</li>
+                </ul>
+            </div>
+
+
+        </div>
+
+
+    </footer>
 
 
 
