--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
 
     <footer>
-        <div class="container flex">
+        <div class="container footer-options">
 
             <div class="col-1-5">
                 <h3>Dropbox</h3>
@@ -508,7 +508,73 @@
             </div>
 
 
+            <div class="col-1-5">
+                <h3>Prodotti</h3>
+
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>funzioni</li>
+                </ul>
+            </div>
+
+
+            <div class="col-1-5">
+                <h3>Azienda</h3>
+
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>funzioni</li>
+                </ul>
+            </div>
+
+
+            <div class="col-1-5">
+                <h3>Supporto</h3>
+
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>funzioni</li>
+                </ul>
+            </div>
+
+
+            <div class="col-1-5">
+                <h3>Community</h3>
+
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>funzioni</li>
+                </ul>
+            </div>
+
+
         </div>
+
+
+
+        <div class="container lang">
+            <div class="flex lang2">
+                <i class="fa-solid fa-earth-americas"></i>
+                <p>Italiano </p>
+                <i class="fa-solid fa-caret-up"></i>
+
+            </div>
+            <div></div>
+        </div>
+
+
 
 
     </footer>
