FIXED: boxes section

--- a/index.html
+++ b/index.html
@@ -384,27 +384,26 @@
 
 
 
-        <!-- boxes  -->
+        <!-- boxes -->
 
         <div class="boxes">
 
             <div class="col-1"> <!-- col 1 -->
 
-                <div class="box1">
-                    <img src="./img/designit.svg" alt="designitlogo">
+
+                <div class="col1-4 box1">
+                    <img src="./img/designit.svg" alt="">
+                </div>
+                <div class="col1-4 box2">
+                    <img src="img/arizona_state_university.svg" alt="">
+                </div>
+                <div class="col1-4 box3">
+                    <img src="img/university_of_florida.svg" alt="">
+                </div>
+                <div class="col1-4 box4">
+                    <img src="img/topps.svg" alt="">
                 </div>
 
-                <div class="box2">
-                    <img src="./img/arizona_state_university.svg" alt="">
-                </div>
-
-                <div class="box3">
-                    <img src="./img/university_of_florida.svg" alt="">
-                </div>
-
-                <div class="box4">
-                    <img src="./img/topps.svg" alt="">
-                </div>
 
             </div>
 
@@ -429,28 +428,24 @@
 
             <div class="col-3"> <!-- col 3-->
 
-                <div class="box5">
-                    <img src="./img/world_bicycle_relief.svg" alt="designitlogo">
+                <div class="col1-4 box5">
+                    <img src="./img/world_bicycle_relief.svg" alt="">
                 </div>
-
-                <div class="box6">
-                    <img src="./img/hearst_corp.svg" alt="">
+                <div class="col1-4 box6">
+                    <img src="img/hearst_corp.svg" alt="">
                 </div>
-
-                <div class="box7">
-                    <img src="./img/lonely_planet.svg" alt="">
+                <div class="col1-4 box7">
+                    <img src="img/lonely_planet.svg" alt="">
                 </div>
-
-                <div class="box8">
-                    <img src="./img/clear_channel.svg" alt="">
+                <div class="col1-4 box8">
+                    <img src="img/clear_channel.svg" alt="">
                 </div>
-
-
 
 
             </div>
 
         </div>
+
 
 
         <!-- banner -->
@@ -461,7 +456,6 @@
                 <button><a href="#" class="btn-white"> Inizia la tua prova gratuita</a></button>
             </div>
         </div>
-
 
 
 
@@ -492,8 +486,9 @@
 
 
 
+
     <footer>
-        <div class="container footer-options">
+        <div class="container footer-options"> <!-- options -->
 
             <div class="col-1-5">
                 <h3>Dropbox</h3>
@@ -564,7 +559,7 @@
 
 
 
-        <div class="container lang">
+        <div class="container lang"> <!-- languages -->
             <div class="flex lang2">
                 <i class="fa-solid fa-earth-americas"></i>
                 <p>Italiano </p>
